# ShadowVPN

./: .gitignore  .travis.yml  CHANGES  LICENSE  Makefile.am  README.md  SECURITY.md  config.h.in  configure.ac
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shadowvpn.8  shadowvpn.cron.d.ex  shadowvpn.default  shadowvpn.default.ex  shadowvpn.doc-base.EX  shadowvpn.init  shadowvpn.install  shadowvpn.manpages  watch.ex
dist-build/: android-arm.sh  android-armv7.sh  android-build.sh  android-mips.sh  android-x86.sh
openwrt/: Makefile
openwrt/files/: shadowvpn.init
packaging/: release.sh  upload_openwrt.sh
samples/: 30-shadowvpn  Makefile.am  chnroutes.sh  client.conf  client.sh  client_down.sh  client_up.sh  foreigh.sh  freebsd_server_down.sh  pf.conf  server.conf  server.sh  server_down.sh  server_up.sh  shadowvpn.conf
samples/darwin/: darwin_client_down.sh  darwin_client_up.sh
samples/freebsd/: freebsd_server_up.sh  pf.conf
samples/windows/: client.conf  client_down.bat  client_up.bat
src/: Makefile.am  args.c  args.h  crypto.c  crypto.h  crypto_perf.c  crypto_secretbox_salsa208poly1305.c  crypto_secretbox_salsa208poly1305.h  daemon.c  daemon.h  log.c  log.h  main.c  nat.c  nat.h  shadowvpn.h  shell.c  shell.h  strategy.c  strategy.h  tun_perf.c  udp_perf.c  vpn.c  vpn.h  win32.c  win32.h
tests/: concurrency.sh
tools/: chnroute.txt  chnroutes.sh  foreign.sh  foreign.txt  gen_chnroutes.sh  gen_foreign.sh  gen_foreign_sh.py  negate_network.py  private.txt
